Toyote resource handler - exception handling added